# llm-document-extracter

./: .env.example  Makefile  README.md  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docxtract/: __init__.py  chain.py  cli.py  extract.py  main.py  models.py  parser.py  summarizer.py  utils.py  writer.py
docxtract/prompts/: generate_ideas_prompt.md  take_away_prompt.md
summaries/: 2201.11903v6.md  2312.10997v5.md
tests/: __init__.py  conftest.py  test_chain.py  test_extract.py  test_models.py  test_parser.py  test_summarizer.py  test_utils.py  test_writer.py
